fix: layout shift

--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -5,6 +5,7 @@
 // -----------------------------------------------------------------------------
 
 .footer {
+  min-height: 315px;
   width: 100%;
   position: relative;
   background-color: variables.$green-medium;
