--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -1,4 +1,5 @@
 .main {
+  min-height: 3875px;
   flex-grow: 1;
   width: 100%;
 
